yimpexeditor/src/test/resources/errors/quotes/singlequoted-modifiers.impex
# single quoted text attribute modifier values cannot be split into many lines
INSERT_UPDATE Customer; uid[unique=true];Name[default='Mar
io']; 
; andi; ; 